--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>M1 Assignment</title>
   </head>
   <body>
+    <h1>M1 Assignment</h1>
+    <p id="shift">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, eos!
+      Maiores, reiciendis labore! Ratione quos, maxime perspiciatis commodi
+      saepe accusantium fuga rerum expedita at quam illum veritatis nisi minima
+      temporibus?
+    </p>
+    <button
+      type="button"
+      onclick='document.getElementById("shift").innerHTML="Goodbye, Lorem! Hello, English!"'
+    >
+      Make Sense!
+    </button>
     <script src="./main.js"></script>
   </body>
 </html>
