--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     >
       Make Sense!
     </button>
+    <h2>Your Question</h2>
+    <p>What is your favorite color?</p>
     <script src="./main.js"></script>
   </body>
 </html>
