--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       Make Sense!
     </button>
     <h2>Your Question</h2>
-    <p>What is your favorite color?</p>
+    <p>If you could learn any language what would it be?</p>
     <script src="./main.js"></script>
   </body>
 </html>
